[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/enemy/scroll monster/scroll monster melee.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/tar monster/tarmonster.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/ghost copy.png" type="Texture" id=3]
[ext_resource path="res://assets/enemy/tar monster/tarmonsterhit.png" type="Texture" id=4]
[ext_resource path="res://assets/enemy/tar monster/tarmonsterdie2.png" type="Texture" id=5]
[ext_resource path="res://assets/enemy/tar monster/tarmonster2.png" type="Texture" id=6]
[ext_resource path="res://assets/enemy/tar monster/tarmonsterdie1.png" type="Texture" id=7]
[ext_resource path="res://assets/enemy/tar monster/tarmonsterdie3.png" type="Texture" id=8]
[ext_resource path="res://assets/enemy/tar monster/tarmonsterdie5.png" type="Texture" id=9]
[ext_resource path="res://assets/enemy/tar monster/tarmonsterdie4.png" type="Texture" id=10]
[ext_resource path="res://src/actors/tar enemy/tarweapon.gd" type="Script" id=11]
[ext_resource path="res://src/ui/health_bar.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/actors/tar enemy/tar.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/actors/tar enemy/tarenemy.gd" type="Script" id=14]
[ext_resource path="res://assets/audio/weeeeeeuhh.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/GUI/buttonpressed 2.png" type="Texture" id=16]
[ext_resource path="res://assets/GUI/buttonunpressed2.png" type="Texture" id=17]
[ext_resource path="res://assets/GUI/buttonunpressed1.png" type="Texture" id=18]
[ext_resource path="res://assets/GUI/buttonpressed1.png" type="Texture" id=19]
[ext_resource path="res://assets/GUI/healthbar.png" type="Texture" id=20]
[ext_resource path="res://assets/palette.bmp" type="Texture" id=21]
[ext_resource path="res://assets/fonts/Orwell.ttf" type="DynamicFontData" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 41 )

[sub_resource type="StyleBoxTexture" id=3]
margin_right = 10.0491
margin_top = 52.822
margin_bottom = 57.0785

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 22 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 45, 21 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 20 )
region_rect = Rect2( 0, 0, 45, 21 )
modulate_color = Color( 0.372549, 0.513726, 0.247059, 1 )

[sub_resource type="Theme" id=13]
resource_local_to_scene = true
default_font = SubResource( 11 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/styles/buttontexture = SubResource( 3 )
Button/styles/disabled = SubResource( 4 )
Button/styles/focus = SubResource( 5 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 7 )
Button/styles/pressed = SubResource( 8 )
ColorPicker/icons/add_preset = null
ColorPicker/icons/color_hue = null
ColorPicker/icons/color_sample = ExtResource( 21 )
ColorPicker/icons/overbright_indicator = null
Fonts/fonts/large = SubResource( 11 )
Fonts/fonts/normal = SubResource( 11 )
ProgressBar/colors/font_color = Color( 0.94, 0.94, 0.94, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/styles/bg = SubResource( 9 )
ProgressBar/styles/fg = SubResource( 12 )
TextEdit/colors/background_color = Color( 0, 0, 0, 0 )
TextEdit/colors/bookmark_color = Color( 0.08, 0.49, 0.98, 1 )
TextEdit/colors/brace_mismatch_color = Color( 1, 0.2, 0.2, 1 )
TextEdit/colors/breakpoint_color = Color( 0.8, 0.8, 0.4, 0.2 )
TextEdit/colors/caret_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/code_folding_color = Color( 0.8, 0.8, 0.8, 0.8 )
TextEdit/colors/completion_background_color = Color( 0.262745, 0.156863, 0.180392, 1 )
TextEdit/colors/completion_existing_color = Color( 0.87, 0.87, 0.87, 0.13 )
TextEdit/colors/completion_font_color = Color( 0.67, 0.67, 0.67, 1 )
TextEdit/colors/completion_scroll_color = Color( 1, 1, 1, 0.29 )
TextEdit/colors/completion_selected_color = Color( 0.14902, 0.0666667, 0.0666667, 1 )
TextEdit/colors/current_line_color = Color( 0.25, 0.25, 0.26, 0.8 )
TextEdit/colors/executing_line_color = Color( 0.2, 0.8, 0.2, 0.4 )
TextEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
TextEdit/colors/font_color_readonly = Color( 0.88, 0.88, 0.88, 0.5 )
TextEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
TextEdit/colors/function_color = Color( 0.4, 0.64, 0.81, 1 )
TextEdit/colors/line_number_color = Color( 0.67, 0.67, 0.67, 0.4 )
TextEdit/colors/mark_color = Color( 1, 0.4, 0.4, 0.4 )
TextEdit/colors/member_variable_color = Color( 0.9, 0.31, 0.35, 1 )
TextEdit/colors/number_color = Color( 0.92, 0.58, 0.2, 1 )
TextEdit/colors/safe_line_number_color = Color( 0.67, 0.78, 0.67, 0.6 )
TextEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
TextEdit/colors/symbol_color = Color( 0.94, 0.94, 0.94, 1 )
TextEdit/colors/word_highlighted_color = Color( 0.8, 0.9, 0.9, 0.15 )
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 6
TextEdit/constants/line_spacing = 4
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null
TextEdit/styles/completion = null
TextEdit/styles/focus = null
TextEdit/styles/normal = null
TextEdit/styles/read_only = null

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 55.3624

[node name="Tarenemy" type="Area2D"]
script = ExtResource( 14 )

[node name="ColorRect" type="TextureRect" parent="."]
visible = false
margin_left = -50.0
margin_top = -31.0
margin_right = 50.0
margin_bottom = 31.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 12 )]
margin_left = -50.0
margin_top = 49.0
margin_right = 50.0
margin_bottom = 63.0
theme = SubResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
scale = Vector2( 3.10938, 3.10938 )
frames = SubResource( 2 )
animation = "die"

[node name="tarweapon" type="Position2D" parent="."]
script = ExtResource( 11 )
Tar = ExtResource( 13 )

[node name="attackcooldown" type="Timer" parent="."]
wait_time = 0.01

[node name="deathtimer" type="Timer" parent="."]

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 14 )

[node name="phase" type="Timer" parent="."]
wait_time = 4.0

[connection signal="body_entered" from="." to="." method="_on_Tarenemy_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Tarenemy_body_exited"]
[connection signal="timeout" from="attackcooldown" to="." method="_on_attackcooldown_timeout"]
[connection signal="timeout" from="deathtimer" to="." method="_on_deathtimer_timeout"]
[connection signal="timeout" from="phase" to="." method="_on_phase_timeout"]
